--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,4 @@
-In version 1.6.X
-   - 2016-06-13: upgrade to Solr 6.0.1
+In version 1.6.6.3.0
+  - 2016-12-09: upgrade to Solr 6.3.0
+In version 1.6.6.0.1
+  - 2016-06-13: upgrade to Solr 6.0.1
