--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,5 @@
+In version 1.6.6.5.1
+  - 2017-04-18: upgrade to Solr 6.5.1
 In version 1.6.6.3.0
   - 2016-12-09: upgrade to Solr 6.3.0
 In version 1.6.6.0.1
